[project]
name = "cable-heat-load"
version = "0.1.0"
description = "Heater calibration and cable heat-load measurement for a cryostat, driven by a CTC100 over Ethernet."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "lab-procedure>=0.0.1",
    "numpy>=2.5.1",
    "pika>=1.4.1",
    "pypdf>=6.14.2",
    "pyserial>=3.5",
    "sqlalchemy>=2.0.51",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cable_heat_load*"]
